<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:focusable="true"
        android:onClick="onLoginButtonClicked"
        android:text="@string/login_button_label"
        android:layout_weight="0.75" />

    <TextView
        android:id="@+id/metadata"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:layout_weight="1.17"
        android:visibility="invisible"/>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="0.75"
        android:layout_height="330dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dislike_button"
            android:layout_height="40dp"
            android:onClick="onDislikeButtonClicked"
            android:text="@string/dislike_button_label"
            android:layout_weight="1"
            android:layout_width="100dp" />

        <Button
            android:id="@+id/like_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="onLikeButtonClicked"
            android:text="@string/like_button_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skip_song_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="onSkipSongButtonClicked"
            android:text="@string/skip_button_label" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/play_track_button"
            android:onClick="onPlayButtonClicked"
            android:text="@string/play_track_button_label"
            android:layout_width="100dp"
            android:layout_height="40dp" />

    </LinearLayout>
</LinearLayout>