<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/metadata"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:onClick="onLoginButtonClicked"
        android:text="@string/login_button_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skip_prev_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSkipToPreviousButtonClicked"
            android:text="@string/dislike_button_label"/>

        <Button
            android:id="@+id/skip_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSkipToNextButtonClicked"
            android:text="@string/like_button_label"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="362dp"
            android:layout_height="325dp">

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPauseButtonClicked"
        android:text="@string/pause_button_label_toggle" />


</LinearLayout>